[package]
name = "effnine"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
warp = { version = "0.4", features = ["server", "websocket"] }
futures = { version = "0.3.31", default-features = false }
uuid = { version = "1.18.0", features = ["v4"] }
